refactor alter index.html line12

--- a/git_test/index.html
+++ b/git_test/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>
      Alterado no github   />h1
-     <h1> alterado no vc code</h1>
+     <h1> alterado no vs code</h1>
 
 
 </body>
